refactored to leverage es6 module import/export syntax. created few es6 modules copying/pasting existing code. for browser compatibility added babel transpiler to convert to es5 complient code. which means it can be used in even IE6. babel is configured into webpack build system. webpack is configured to output as UMD library which means it can be used everywhere including browsers. for building you have to install npm. for dev build run "webpack" command, for release build run "webpack -p" command, in app root directory. output will be in "dist" drectory which will inlude "number-to-bangla.js" & "number-to-bangla.min.js".

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -10,6 +10,7 @@
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
   <script src="https://code.jquery.com/qunit/qunit-2.4.0.js"></script>
-  <script src="number-to-bangla.js" type="text/javascript" charset="utf-8"></script>
+<script src="dist/number-to-bangla.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="test/test.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
